--- a/Bai2.html
+++ b/Bai2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Enlighten Designs - About</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
     <div id="wrapper">
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <header id="header" role="banner">
-            <h1><img src="logo.png" style="padding: 25px 0px;margin: -50px;"
+            <h1><img src="image/logo.png" style="padding: 25px 0px;margin: -50px;"
                 width="450" height="50" alt="Enlighten Designs" /></h1>
         </header>
         <main id="content" class="container" role="main">
